# MITSP

./: CMakeLists.txt  Project.txt  email-main.cpp  makefile  output_bi.txt  output_mi.txt  rename.sh  run.sh
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
instances/: 00_firsttest.tsp  08_TRP-S1000-R1.tsp  instances-list.txt
instances-iccc-2025/: berlin52_bi_1.txt  berlin52_bi_2.txt  berlin52_bi_3.txt  berlin52_mi_1.txt  berlin52_mi_2.txt  berlin52_mi_3.txt  lin318_bi_1.txt  lin318_bi_2.txt  lin318_bi_3.txt  lin318_mi_1.txt  lin318_mi_2.txt  lin318_mi_3.txt  rat783_bi_1.txt  rat783_bi_2.txt  rat783_bi_3.txt  rat783_mi_1.txt  rat783_mi_2.txt  rat783_mi_3.txt
src/: mainMITSP.cpp
